written all the css code the taskmanager is fully styled

--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
             </div>
         </main>
     </div>
-    <script src="script.js"></script>
+    <script src="iscript.js"></script>
 </body>
 </html>
